assets/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400&family=Oswald&display=swap');

/* Table of Contents
   -----------------
   Temporary Styles
   Reset
   Utilities
   Typography & Colours
   Decoration
   STRUCTURE
    - Main Header & Navigation
    - Hero Section
    - Your Job
    - Our Job
    - Let's Go
    - Footer
    MEDIA QUERIES
    - Laptops
    - Tablet (Landscape)
    - Tablet (Portrait)
    - Phone (Landscape)
    - Phone (Portrait)
   -----------------
 */


/* --- Temporary Styles (while building layout) --- */
section,
aside {
    /* outline: 2px solid black; */
}


/* --------------------------------------------- */



/* Reset */
body {
    margin: 0;
    padding: 0;
}


/* Utilities */
html, * {
    scroll-behavior: smooth!important;
}

.overlay {
    background-color: rgba(0, 0, 0, 0.7);
}


/* Typography & Colours */
body {
    font-family:  'Fira Sans', sans-serif;
    color: #3a3a3a;
}

h1,
h2,
h3,
h4 {
    font-family: 'Oswald', sans-serif;
    text-transform: uppercase;
}

h3 {
    text-align: center;
}

.logo-text {
    line-height: 1.3rem;
}

.logo-text em {
    font-size: 1.6rem;
}

.logo-text em:last-child {
    font-size: 1rem;
    letter-spacing: 0.01rem;
}

#logo:hover em {
    font-style: normal;
}

header a,
footer a {
    color: #3a3a3a;
    text-decoration: none;
}

.section-heading {
    font-size: 3rem;
    letter-spacing: 4px;
}

.overlay {
    color: #fff;
}

aside h2,
.card h3 {
    font-size: 2rem;
    letter-spacing: 2px;
}

.card h3 {
    background-color: #476613;
    color: #fff;
}


/* Decoration */
.section-heading  {
    border-bottom: 2px solid;
}


/* STRUCTURE */
.flex-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    box-sizing: border-box;
    width: 100%;
}

.control-width {
    max-width: 1700px;
    margin: 0 auto;
}

section,
section.control-width {
    margin-bottom:  50px;
}

section > h3 {
    max-width: 5em;
    margin: 0 auto 1em;
}

.custom-ul {
    margin: 0;
    padding: 0;
}

.custom-ul li {
    list-style: none;
    margin: .25em auto;
}


/* Main Header & Navigation */
#main-header {
    background: #fff;
}

#logo {
    display: flex;
    align-items:  center;
}

#logo::before {
    background:  url('../images/sombrero.webp') no-repeat center/cover;
    content:  '';
    width:  50px;
    height:  50px;
    margin:  0 5px 0 0;
}

.logo-text {
    display:  flex;
    flex-direction:  column;
    justify-content:  flex-start;
}


nav {
    width: auto;
}

#main-menu {
    margin: 15px 0;
    padding: 0;
    justify-content: space-around;
    flex-direction: row;
}

#main-menu li {
    list-style: none;
    margin: 0 1em;
}

#main-menu a {
    text-decoration: none;
}



/* Hero Section */
#hero {
    background: url('../images/hero-image.webp') no-repeat center/cover;
    position: relative;
    height: 600px;
}

aside {
    position: absolute;
    top: 50%;
    right: 10%;
    bottom: 50%;
    left: auto;
    text-align: center;
    width: 15%;
    height: 45%;
    margin: auto;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    padding: 0 15px;
}

aside h2,
aside p {
    margin: 0;
    padding: 0;
}


/* Your Job */
#your-job ul {
    column-count: 2;
}

#your-job li {
    width: 45%;
    text-align: left;
}

#your-job li:first-of-type {
    margin-top: 0;
}


/* Our Job */
.card-container {
    justify-content: space-evenly;
}

.lawn-treatments {
    background: url('../images/lawn-treatments.webp') no-repeat center/cover;
}

.hard-surfaces {
    background: url('../images/hard-surfaces.webp') no-repeat center/cover;
}

.card {
    position: relative;
    border: 2px solid;
    background-colors: #cfcfcf;
    text-align: center;
    margin-top: 2em;
    margin-bottom: 2em;
    min-height: 300px;
    padding: 1em;
    width: 33%;
    flex-direction: column;
}

.card h3,
.card .overlay,
.card button {
    width: 90%;
}

.card h3 {
    margin: -3rem 0 0 0;
    padding: 0.5rem 0;
}

.card .overlay {
    min-height: 250px;
    margin: 1em auto;
    justify-content: center;
    flex-direction: column;
}

.card h4 {
    margin-bottom: 0;
}

.card .overlay-content p {
    margin: 0.3em 0 0;
}


/* Let's Go */
form {
    margin: 1.6em auto 0;
    width: 90%;
}

.label-input-container {
    width: 49%;
}

label,
input {
    display: block;
    width: 100%;
}

label:not(:first-of-type) {
    margin-top: 1em;
}

.required {
    font-size: 0.8rem;
}

form button {
    display: block;
    margin: 1em 0;
}


/* Footer */
footer {
    padding: 1em;
}

footer .flex-container {
    margin-top: 1em;
    justify-content: center;
}

footer > .flex-container {
    width: 33%;
    margin-top: 0;
}

#social-media,
#social-media ul {
    display: flex;
    flex-direction: row;
}

#social-media {
    margin: 0;
    justify-content: flex-start;
}

#social-media li {
    margin: 0 0.5em;
}

#copyright {
    justify-content: flex-end;
}


/* MEDIA QUERIES */

/* Laptops */
@media screen
 and (min-width: 1366px) 
 and (max-width: 1680px) {
    #hero {
        height: 400px;
    }
 }

/* Tablet (Landscape) */
@media screen
 and (min-width: 1024px) 
 and (max-width: 1366px) {
    #hero {
        height: 350px;
    }

    aside {
        width: 25%;
        height: 60%;
    }
}

/* Tablet (Portrait) */
@media screen 
and (max-width: 1024px)
and (orientation: portrait) {
    #hero {
        height: 350px;
    }

    aside {
        height: 66%;
        width: 30%;
    }

    #your-job li {
        width: 60%;
    }
}


/* Phone (Landscape) */
@media screen 
and (max-width: 844px)
and (orientation: landscape) {

    #hero {
        height: 150px;
    }

    aside {
        width: 33%;
        height: 130px;
    }

    #your-job li {
        min-width: 60%;
    }

    .card,
    .label-input-container {
        width: 45%;
    }

    form {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
    }

    form > .required,
    form button {
        display: block;
    }

    form > .required {
        width: 100%;
    }

    footer > .flex-container {
        width: 30%;
    }


}

/* Phone (Portrait) */
@media screen and (max-width: 414px) {
    .flex-container {
        flex-direction: column;
    }

    #hero {
        height: 200px;
    }

    aside {
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        width: 66%;
        height: 150px;
    }

    #your-job ul {
        column-count: unset;
    }

    #your-job li {
        width: 66%;
    }

    .card {
        width: 90%;
    }

    .label-input-container {
        width: 100%;
    }

    footer > .flex-container {
        width: 100%;
    }

    #back-to-top {
        order: -1;
    }

    #social-media,
    #copyright {
        justify-content: center;
    }


}

